# linux-ssip

./: .gitignore  LICENSE  Makefile  README.md
kernel_mode/kill_hook/: Makefile  mod_sys_kill_hook.c
kernel_mode/unlink_hook/: Makefile  mod_sys_unlinkat_hook.c
kernel_mode/write_hook/: mod_sys_openat_write_hook.c
modules/sys_kill_hook/: README.md  mod_sys_kill_hook.c
modules/sys_openat_write_hook/: Makefile  README.md  mod_sys_openat_write_hook.c
modules/sys_unlinkat_hook/: README.md  mod_sys_unlinkat_hook.c
scripts/: help.sh  install.sh  start.sh  stop.sh  test.sh  ui.sh  uninstall.sh
user_mode/: CMakeLists.txt  net_link.c  net_link.h
user_mode/include/: daemon.h  daemon_launch.h  user_interface.h
user_mode/include/utils/: logger.h  message.h  nl_wrapper.h  rule_db.h
user_mode/src/: daemon_launch.c  user_interface.c
user_mode/src/daemons/: kill_daemon.c  unlink_daemon.c  write_daemon.c
user_mode/src/utils/: logger.c  message.c  nl_wrapper.c  rule_db.c
user_mode/test/: test_logger.c  test_message.c  test_rule_db.c
